version/0.28/_sources/api/solver/_autosummary/settings/surface_1.rst.txt
:orphan:

.. _surface_1:

surface
=======

.. autoclass:: ansys.fluent.core.generated.solver.settings_251.surface_1
    :show-inheritance:

.. rubric:: Methods

========================================   =========================================

Method                                                                       Summary

========================================   =========================================
:ref:`create <create_1>`                                 Create an instance of this.

:ref:`delete <delete_1>`                                    Delete selected objects.

:ref:`rename <rename>`                                            Rename the object.

:ref:`list <list>`                                    List the names of the objects.

:ref:`list_properties <list_properties>`       List active properties of the object.

:ref:`make_a_copy <make_a_copy>`                        Create a copy of the object.

========================================   =========================================

.. rubric:: Named object type

:ref:`surface_1_child <surface_1_child>`


.. rubric:: Included in:

==============================================   ==============================================================================================================================================================================================================================================================================================

Parent                                                                                                                                                                                                                                                                                                                                  Summary

==============================================   ==============================================================================================================================================================================================================================================================================================
:ref:`report_definitions <report_definitions>`       Provides access to create an object that specifies a certain quantity or set of values to be computed at the end of a solver timestep or iteration. You can then choose to have multiple report definitions printed to the console written to a single file or plotted in the same window.

==============================================   ==============================================================================================================================================================================================================================================================================================

